fixing overflow hidden issue

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ header {
 }
 .banner {
 	max-width: 1200px;
-	height: 100vh;
+
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	margin: auto;
@@ -154,13 +154,10 @@ header {
 	background-image: linear-gradient(#9234eb, #56198f);
 }
 main {
-	height: 100vh;
 	padding-top: 100px;
 	background: #232231;
 }
-#sobre {
-	height: 500px;
-}
+
 .sobre__text h1 {
 	font-size: 25px;
 	background-color: #9234eb;
@@ -173,7 +170,7 @@ main {
 
 .container__sobre {
 	max-width: 1200px;
-	height: 400px;
+	height: 600px;
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
@@ -208,7 +205,6 @@ main {
 }
 
 @media (max-width: 815px) {
-	html,
 	body {
 		overflow-x: hidden;
 	}
@@ -233,7 +229,7 @@ main {
 	}
 	.menu-toggle {
 		position: absolute;
-		top: 8vh;
+		top: 55px;
 		right: 0px;
 		width: 70vw;
 		height: 100vh;
@@ -257,7 +253,7 @@ main {
 		text-align: center;
 	}
 	.apresentacao__imagem img {
-		max-width: 350px;
+		max-width: 300px;
 	}
 	.apresentacao__imagem {
 		display: grid;
@@ -286,6 +282,9 @@ main {
 
 	.profile-image {
 		padding-bottom: 80px;
+	}
+	.profile-image img {
+		width: 250px;
 	}
 }
 @media (max-width: 460px) {
